css/drawing.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : 04-Aug-2019, 17:45:21
    Author     : jase
*/

span.ps-name {
    font-weight: bold;
}

g.j-point > circle {
    fill:#999;
}

g.j-point > text {
    font-family: "sans-serif";
    fill:#000;
}

g.j-point.j-active > circle {
    fill:#000;
}

g.j-item div {
    padding: 4px 8px;
    border:1px solid #ccc;
}

g.j-item.j-active div {    
    padding: 3px 7px;
    border:2px solid #333;
}

path.link {
    fill:none;
    stroke: #aaa;
    stroke-width: 1px;    
}

path.link.source {
    fill:none;
    stroke:#449fdc;
    stroke-width: 3px;    
}

path.link.target {
    fill:none;
    stroke:#4ddc44;
    stroke-width: 3px;    
}

g.j-item.source div {
    border-width:2px;
    border-color: #449fdc;
    padding: 3px 7px;
}

g.j-item.target div {
    border-width:2px;
    border-color: #4ddc44;
    padding: 3px 7px;
}

span.control-point { color: green }

/* dark mode 
Note that lines can and often do specify stroke black

body {
    background-color:#111;
}

g.j-point > circle {
    fill:#777;
}

g.j-point > text {
    fill: white;
}

g.j-point.j-active > circle {
    fill: white;
}

g.j-item div {
    border-color:#888;
    color: #eee;
}

g.j-item.j-active div {
    border-color:#ccc;
    color: #fff;
}

path.link {
    stroke: #777;
}
*/

